--- a/Desktop/E-commerce/styles.css
+++ b/Desktop/E-commerce/styles.css
@@ -5,17 +5,34 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+}
 
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 nav {
     height: 80px;
     display: flex;  
 }
+
+
 img{
     width: 100%;
-    height: 100%;
-    max-height: 50vh;
-    padding: 20px;
+}
+p {
+    line-height: 1.5;
+}
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 .nav__container {
@@ -59,6 +76,62 @@ li{
 .nav__link--primary:hover{
     text-decoration: none;
 }
+
+.btn__menu {
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    color: #7342d6;
+}
+
+.menu__backdrop {
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    /* display: flex */
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.menu--open .menu__backdrop{
+    display: flex;
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__list {
+    padding: 32px 0;
+
+}
+
+.menu__link {
+    font-size: 40px;
+    color: white;
+}
+
+.btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
+}
+
+/*
+LANDING
+*/
+
+
 #landing{
     background-color: rgba(115, 66, 214, 0.1);
 }
@@ -107,6 +180,7 @@ button:active {
 }
 .header__img--wrapper {
     padding: 20px;
+    z-index: 2;
 }
 .container {
     padding: 56px 0;
@@ -117,12 +191,49 @@ button:active {
     max-width: 1200px;
     margin: 0 auto;
 }
+.row__column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.no-cursor {
+    cursor: not-allowed;
+}
 
 /* 
 
 HIGHLIGHTS
 
 */
+
+#highlights {
+    position: relative;
+    max-width: 100vw;
+}    
+
+#highlights:after,
+#highlights:before {
+   background: url('/FES Library - CSS/assets/wave.svg');
+   content: "";
+   position: absolute;
+   width: 101vw;
+   height: 12vw;
+   left: 0;
+   z-index: 1;
+   background-size: cover;
+   background-repeat: no-repeat;  
+}
+
+#highlights:before {
+   top: 1px;
+   transform: translateY(-100%);
+}
+
+#highlights:after {
+   bottom: 1px;
+   transform: translateY(100%) rotate(180deg);
+} 
+
 
 .highlight__wrapper {
     display: flex;
@@ -139,6 +250,7 @@ HIGHLIGHTS
 
 .highlight__para {
     text-align: center;
+    max-width: 280px;
 }
 
 .highlight__img {
@@ -157,4 +269,105 @@ HIGHLIGHTS
 .highlight__subtitle {
     font-size: 20px;
     margin-bottom: 16px;
+}
+
+/*
+FEATURES
+
+*/
+
+#features {
+    padding-top: 8vw;
+    background-color: rgba(115, 66, 214, 0.1);
+}
+
+.books {
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+.book {
+    width: 25%;
+    padding: 24px;
+}
+
+.book__img {
+    max-height: 380px;
+    transition: all 300ms ease;
+    cursor: not-allowed;
+}
+
+.book__img--wrapper {
+    margin-bottom: 8px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+}
+
+.book:hover .book__img {
+    transform: scale(1.03);
+}
+
+.book__title {
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+
+.book__title:hover {
+    text-decoration: underline;
+    cursor: not-allowed;
+}
+
+.book__ratings {
+    margin-bottom: 8px;
+    color: #fabf2a;
+}
+
+.book__price--normal {
+    text-align: line-through;
+    padding-right: 6px;
+    color: #bfbfbf;
+}
+
+/*
+EXPLORE
+*/
+#explore{
+    background-color: rgba(115, 66, 214, 0.21);
+}
+
+/*
+FOOTER 
+*/
+footer {
+    background-color: #242424;
+}
+
+.footer__logo {
+    display: flex;
+}
+
+.footer__logo--img {
+    width: 160px;
+    filter: grayscale(1) invert(1);
+}
+
+.footer__link,
+.footer__copyright {
+    color:#fff;
+}
+
+.footer__list {
+    margin: 20px 0 24px 0;
+}
+
+.footer__link{
+    padding: 0 8px;
+}
+
+@media (max-width: 550px) {
+    .nav__links {
+        display: none;
+    }
 }
